enhanced some minor uses in function tests